--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -4,4 +4,5 @@
 	<li><a href="{{ root_url }}/resume">Resume</a></li>
 	<li><a href="{{ root_url }}/projects">Projects</a></li>
 	<li><a href="{{ root_url }}/archives">Archive</a></li>
+	<li><a href="{{ root_url }}/robotfindskitten/non-kitten-item/">Robot Finds Kitten</a></li>
 </ul>
